--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ ipykernel
 segmentation_models
 tqdm
 janus==0.6.1
+torch==1.7.0
+torchvision==0.8.0
+git+https://github.com/oeway/cellpose@convert-keras#egg=cellpose
