Add cellpose model (#13)
* Add cellpose model and test

* move tests

* Add save model, fix format

* Fix format

* reorganize and improve tests

* save ground truth

* load pretrained weights

* remove weights

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ segmentation_models
 tqdm
 janus==0.6.1
 folium==0.2.1
+torch==1.7.0
+torchvision==0.8.0
+git+https://github.com/oeway/cellpose@convert-keras#egg=cellpose
