--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ geojson
 read_roi
 palettable
 descartes
-geojson
 imageio
-numpy==1.18.0
+numpy>=1.18.0
 tensorflow==2.3.1
 albumentations
 ipykernel
