Improve torch version

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ imageio
 tqdm
 janus==0.6.1
 folium==0.2.1
-torch==1.7.0
-torchvision==0.8.0
+torch>=1.7.0
+torchvision>=0.8.0
 cellpose@git+https://github.com/oeway/cellpose@convert-keras#egg=cellpose
 #albumentations
 pytest
