--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,17 @@ read_roi
 palettable
 descartes
 imageio
-#numpy==1.18.0
-#tensorflow==2.3.1
+numpy==1.18.0
+tensorflow==2.3.1
 ipykernel
-#segmentation_models
+segmentation_models_pytorch
 tqdm
 janus==0.6.1
 folium==0.2.1
 torch>=1.7.0
 torchvision>=0.8.0
 cellpose@git+https://github.com/oeway/cellpose@convert-keras#egg=cellpose
-#albumentations
+albumentations
 pytest
 shapely
 scikit-image
